@@ -93,4 +93,5 @@
   <li>Zdravko Balorda</li>
   <li>Vincent Stemen</li>
   <li>Héctor Daniel Cortés González</li>
+  <li>Nick Legg</li>
 </ul>
